# Rotom-Bot-2nd-Instance

./: .breakpoints  .gitignore  README.md  help_aliases.json  help_data.json  keep_alive.py  main.py  pyproject.toml
cogs/: afk.py  first.py  help.py  loc.py  logger.py  music.py  owner.py  pokedex.py  pokedex2.py  prefix.py  psd.py  sets.py  villain.py
data/: aliases.json  currencies.json  data.json  moves.json
discord/: utils.py
sets/: dp.json  gs.json  rb.json  rs.json
