[tool.poetry]
name = "repl_python3_20-Tester"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
Flask = "^2.0.1"
typing-extensions = "^3.10.0"
yarl = "^1.6.3"
replit = "^3.2.4"
aPRAW = "^0.6.9-alpha.0"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
bs4 = "^0.0.1"
lxml = "^4.6.3"
prettytable = "^2.2.1"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
